--- a/.github/workflows/Myworkflow.yml
+++ b/.github/workflows/Myworkflow.yml
@@ -1,22 +1,28 @@
 name: CleanWorkFlow
 on:
   push:
-    branches: ["main"]
+    branches: [ main ]
   pull_request:
-    branches: ["main"]
+    branches: [ main ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
      - name: checkout
-     - uses: actions/checkout@v4.2.1
+       uses: actions/checkout@v4.2.1
+
      - name: Setup Java JDK
-     - uses: actions/setup-java@v4.4.0
+       uses: actions/setup-java@v4.4.0
        with:
           distribution: 'temurin'
           java-version: '1.8'
-     - name: gradle
-     - uses: gradle/actions@v4.1.0
+
+     - name: build with gradle
+       run: ./gradlew build
+
      - name: Upload a Build Artifact
        uses: actions/upload-artifact@v4.4.3
+       with:
+         name: Android.apk
+         path: app/build/apk/debug/app-debug.apk
