--- a/.github/workflows/Myworkflow.yml
+++ b/.github/workflows/Myworkflow.yml
@@ -16,7 +16,7 @@ jobs:
        uses: actions/setup-java@v4.4.0
        with:
           distribution: 'temurin'
-          java-version: '1.8'
+          java-version: '8.0.422+5'
 
      - name: build with gradle
        run: ./gradlew build
