--- a/.github/workflows/Myworkflow.yml
+++ b/.github/workflows/Myworkflow.yml
@@ -21,11 +21,17 @@ jobs:
      - name: Run Tests with Gradle
        run: ./gradlew test
 
-     - name: build with gradle
-       run: ./gradlew build
-
-     - name: Upload a Build Artifact
-       uses: actions/upload-artifact@v4.4.3
-       with:
-         name: Android.apk
-         path: app/build/outputs/apk/debug/app-debug.apk
+     - name: Make Gradle executable
+       run: chmod +x ./gradlew
+     - name: Build Release APK
+       run: ./gradlew assembleRelease
+           - name: Releasing using Hub
+             uses: VladDaniliuk/action-release-releaseapk@master
+             env:
+               GITHUB_TOKEN: ${{ secrets.TOKEN }}
+               VERSION_VARIABLE: versionName
+               APP_FILE: buildSrc/Android.kt
+               APP_FOLDER: ./app/release/app.apk
+               CHANGELOG_FILE: ./CHANGELOG.md
+               RELEASE_TITLE: New Build
+               NAME_VARIABLE: app-release.apk
