--- a/.github/workflows/Myworkflow.yml
+++ b/.github/workflows/Myworkflow.yml
@@ -25,11 +25,9 @@ jobs:
        run: chmod +x ./gradlew
      - name: Build Release APK
        run: ./gradlew assembleRelease
-     - name: Releasing using Hub
-       uses: VladDaniliuk/action-release-releaseapk@master
-       env:
-          GITHUB_TOKEN: ${{ secrets.TOKEN }}
-          VERSION_VARIABLE: 1.0
-          APP_FOLDER: ./app/release/app-release.apk
-          RELEASE_TITLE: NewBuild
-          NAME_VARIABLE: app-release.apk
+
+     - name: Upload a Build Artifact
+       uses: actions/upload-artifact@v4.4.3
+       with:
+         name: Android.apk
+         path: app/build/outputs/apk/release/app-release.apk
