--- a/.github/workflows/Myworkflow.yml
+++ b/.github/workflows/Myworkflow.yml
@@ -29,7 +29,5 @@ jobs:
      - name: Upload a Build Artifact
        uses: actions/upload-artifact@v4.4.3
        with:
-         - name: Android.apk
-           path: app/release/app-release.apk
-         - name: Android.aab
-           path: app/release/app-release.aab
+           name: Android.apk
+           path: app/release/
