--- a/.github/workflows/Myworkflow.yml
+++ b/.github/workflows/Myworkflow.yml
@@ -26,11 +26,17 @@ jobs:
      - name: Build Release APK
        run: ./gradlew assembleRelease
 
+     - name: Upload a Build Artifact
+       uses: actions/upload-artifact@v4.4.3
+       with:
+          name: Android.apk
+          path: app/release/app-release.apk
+
      - name: Build Release AAb
        run: ./gradlew bundleRelease
 
      - name: Upload a Build Artifact
        uses: actions/upload-artifact@v4.4.3
        with:
-           name: Android
-           path: app/release/
+          name: Android.aab
+          path: app/release/app-release.aab
