--- a/.github/workflows/Myworkflow.yml
+++ b/.github/workflows/Myworkflow.yml
@@ -39,4 +39,4 @@ jobs:
        uses: actions/upload-artifact@v4.4.3
        with:
           name: Android.aab
-          path: app/release/app-release.aab
+          path: app/build/outputs/bundle/release/app-release.aab
