--- a/.github/workflows/Myworkflow.yml
+++ b/.github/workflows/Myworkflow.yml
@@ -18,19 +18,35 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
 
+     - name: Decode Keystore
+       env:
+         ENCODED_STRING: ${{ secrets.SIGNING_KEY_STORE_BASE64 }}
+         SIGNING_KEY_STORE_PATH: ${{ secrets.SIGNING_KEY_STORE_PATH }}
+
+       run: |
+        echo $ENCODED_STRING > keystore-b64.txt
+        base64 -d keystore-b64.txt > $SIGNING_KEY_STORE_PATH
+
      - name: Run Tests with Gradle
        run: ./gradlew test
 
      - name: Make Gradle executable
        run: chmod +x ./gradlew
+
      - name: Build Release APK
+       env:
+         SIGNING_KEY_STORE_PATH: ${{ secrets.SIGNING_KEY_STORE_PATH }}
+         SIGNING_KEY_ALIAS: ${{ secrets.SIGNING_KEY_ALIAS }}
+         SIGNING_KEY_PASSWORD: ${{ secrets.SIGNING_KEY_PASSWORD }}
+         SIGNING_STORE_PASSWORD: ${{ secrets.SIGNING_STORE_PASSWORD }}
        run: ./gradlew assembleRelease
 
      - name: Upload a Build Artifact
-       uses: actions/upload-artifact@v4.4.3
-       with:
-          name: Android.apk
-          path: app/build/outputs/apk/release/app-release.apk
+       env:
+         SIGNING_KEY_STORE_PATH: ${{ secrets.SIGNING_KEY_STORE_PATH }}
+         SIGNING_KEY_ALIAS: ${{ secrets.SIGNING_KEY_ALIAS }}
+         SIGNING_KEY_PASSWORD: ${{ secrets.SIGNING_KEY_PASSWORD }}
+         SIGNING_STORE_PASSWORD: ${{ secrets.SIGNING_STORE_PASSWORD }}
 
      - name: Build Release AAb
        run: ./gradlew bundleRelease
@@ -38,5 +54,7 @@ jobs:
      - name: Upload a Build Artifact
        uses: actions/upload-artifact@v4.4.3
        with:
-          name: Android.aab
-          path: app/build/outputs/bundle/release/app-release.aab
+          name: release-artifacts
+          path: |
+             app/build/outputs/apk/release/
+             app/build/outputs/bundle/release/
