--- a/.github/workflows/Myworkflow.yml
+++ b/.github/workflows/Myworkflow.yml
@@ -19,12 +19,11 @@ jobs:
           java-version: '17'
 
      - name: Decode Keystore
-       env:
-         ENCODED_STRING: ${{ secrets.SIGNING_KEY_STORE_BASE64 }}
-         SIGNING_KEY_STORE_PATH: ${{ secrets.SIGNING_KEY_STORE_PATH }}
-       run: |
-        echo $ENCODED_STRING > keystore-b64.txt
-        base64 -d keystore-b64.txt > $SIGNING_KEY_STORE_PATH
+       id: decode_keystore
+       uses: timheuer/base64-to-file@v1
+       with:
+           fileName: ${{ secrets.SIGNING_KEY_STORE_PATH }}
+           encodedString: ${{ secrets.SIGNING_KEY_STORE_BASE64 }}
 
      - name: Run Tests with Gradle
        run: ./gradlew test
