--- a/.github/workflows/Myworkflow.yml
+++ b/.github/workflows/Myworkflow.yml
@@ -37,7 +37,7 @@ jobs:
           SIGNING_KEY_ALIAS: ${{ secrets.SIGNING_KEY_ALIAS }}
           SIGNING_KEY_PASSWORD: ${{ secrets.SIGNING_KEY_PASSWORD }}
           SIGNING_STORE_PASSWORD: ${{ secrets.SIGNING_STORE_PASSWORD }}
-       run: ./gradlew assembleRelease
+       run: ./gradlew assembleRelease --stacktrace
 
      - name: Build Release AAb
        env:
@@ -45,7 +45,7 @@ jobs:
          SIGNING_KEY_ALIAS: ${{ secrets.SIGNING_KEY_ALIAS }}
          SIGNING_KEY_PASSWORD: ${{ secrets.SIGNING_KEY_PASSWORD }}
          SIGNING_STORE_PASSWORD: ${{ secrets.SIGNING_STORE_PASSWORD }}
-       run: ./gradlew bundleRelease
+       run: ./gradlew bundleRelease --stacktrace
 
      - name: Upload a Build Artifact
        uses: actions/upload-artifact@v4.4.3
