--- a/.github/workflows/Myworkflow.yml
+++ b/.github/workflows/Myworkflow.yml
@@ -23,6 +23,7 @@ jobs:
        uses: timheuer/base64-to-file@v1
        with:
            fileName: ${{ secrets.SIGNING_KEY_STORE_PATH }}
+           echo: ${{ secrets.SIGNING_KEY_STORE_PATH }}
            encodedString: ${{ secrets.SIGNING_KEY_STORE_BASE64 }}
 
      - name: Run Tests with Gradle
