--- a/.github/workflows/Myworkflow.yml
+++ b/.github/workflows/Myworkflow.yml
@@ -12,8 +12,6 @@ on:
           - debug
           - release
           - both
-  push:
-    branches: [ main , development ]
   pull_request:
     branches: [ main , development]
 
@@ -24,7 +22,7 @@ jobs:
      - name: Select environment
        id: select-environment
        run: |
-         if [ ("${{ inputs.testers }}" == "release") || ("${{ inputs.testers }}" == "both") ]; then
+         if [ "${{ inputs.testers }}" == release || "${{ inputs.testers }}" == both ]; then
               echo "production"
          else
               echo "debugBuild"
