--- a/.github/workflows/Myworkflow.yml
+++ b/.github/workflows/Myworkflow.yml
@@ -11,7 +11,6 @@ on:
         options:
           - debug
           - release
-          - both
   pull_request:
     branches: [ main , development]
 
@@ -57,7 +56,7 @@ jobs:
           SIGNING_KEY_ALIAS: ${{ secrets.SIGNING_KEY_ALIAS }}
           SIGNING_KEY_PASSWORD: ${{ secrets.SIGNING_KEY_PASSWORD }}
           SIGNING_STORE_PASSWORD: ${{ secrets.SIGNING_STORE_PASSWORD }}
-       if: [[ "${{ steps.select-environment.outputs.selected-environment }}" == "release" || "${{ steps.select-environment.outputs.selected-environment }}" == "both" ]]
+       if: ${{ steps.select-environment.outputs.selected-environment == "release" }}
        run: ./gradlew assembleRelease --stacktrace
 
      - name: Build Debug APK
