--- a/.github/workflows/Myworkflow.yml
+++ b/.github/workflows/Myworkflow.yml
@@ -61,7 +61,7 @@ jobs:
           SIGNING_KEY_ALIAS: ${{ secrets.SIGNING_KEY_ALIAS }}
           SIGNING_KEY_PASSWORD: ${{ secrets.SIGNING_KEY_PASSWORD }}
           SIGNING_STORE_PASSWORD: ${{ secrets.SIGNING_STORE_PASSWORD }}
-       if: ${{ needs.determine-environment.outputs.selected-environment == "release" }}
+       if: ${{ needs.determine-environment.outputs.selected-environment == 'release' }}
        run: ./gradlew assembleRelease --stacktrace
 
      - name: Build Debug APK
@@ -69,7 +69,7 @@ jobs:
          SIGNING_KEY_ALIAS: ${{ secrets.SIGNING_KEY_ALIAS }}
          SIGNING_KEY_PASSWORD: ${{ secrets.SIGNING_KEY_PASSWORD }}
          SIGNING_STORE_PASSWORD: ${{ secrets.SIGNING_STORE_PASSWORD }}
-       if: ${{ needs.determine-environment.outputs.selected-environment == "debug" }}
+       if: ${{ needs.determine-environment.outputs.selected-environment == 'debug' }}
        run: ./gradlew assembleDebug --stacktrace
 
      - name: Build Release AAb
@@ -77,7 +77,7 @@ jobs:
          SIGNING_KEY_ALIAS: ${{ secrets.SIGNING_KEY_ALIAS }}
          SIGNING_KEY_PASSWORD: ${{ secrets.SIGNING_KEY_PASSWORD }}
          SIGNING_STORE_PASSWORD: ${{ secrets.SIGNING_STORE_PASSWORD }}
-       if: ${{ needs.determine-environment.outputs.selected-environment == "release" }}
+       if: ${{ needs.determine-environment.outputs.selected-environment == 'release' }}
        run: ./gradlew bundleRelease --stacktrace
 
      - name: Build Debug AAb
@@ -85,7 +85,7 @@ jobs:
          SIGNING_KEY_ALIAS: ${{ secrets.SIGNING_KEY_ALIAS }}
          SIGNING_KEY_PASSWORD: ${{ secrets.SIGNING_KEY_PASSWORD }}
          SIGNING_STORE_PASSWORD: ${{ secrets.SIGNING_STORE_PASSWORD }}
-       if: ${{ needs.determine-environment.outputs.selected-environment == "debug" }}
+       if: ${{ needs.determine-environment.outputs.selected-environment == 'debug' }}
        run: ./gradlew bundleDebug --stacktrace
 
      - name: Upload a Build Artifact
