--- a/.github/workflows/Myworkflow.yml
+++ b/.github/workflows/Myworkflow.yml
@@ -27,6 +27,8 @@ jobs:
           else
               echo "selected-stage=debug" >> "$GITHUB_OUTPUT"
           fi
+        outputs:
+          selected-stage: ${{ steps.select-stage.outputs.selected-stage }}
   build_release:
     needs: determine-environment
     runs-on: ubuntu-latest
