--- a/.github/workflows/Myworkflow.yml
+++ b/.github/workflows/Myworkflow.yml
@@ -113,4 +113,5 @@ jobs:
        with:
           name: release-artifacts
           path: |
-             app/build/outputs/
+             app/build/outputs/apk/
+             app/build/outputs/bundle/
