--- a/.github/workflows/Myworkflow.yml
+++ b/.github/workflows/Myworkflow.yml
@@ -13,6 +13,8 @@ on:
           - release
   pull_request:
     branches: [ main , development]
+  push:
+    branches: [ main , development]
 
 jobs:
   determine-environment:
