--- a/.github/workflows/Myworkflow.yml
+++ b/.github/workflows/Myworkflow.yml
@@ -69,8 +69,10 @@ jobs:
            echo $ENCODED_STRING > keystore-b64.txt
            base64 -d keystore-b64.txt > keystore.jks
 
-     - name: Make Gradle executable
-       run: ./gradlew test
+     - name: Test
+       run: |
+         chmod +x ./gradlew
+         ./gradlew test --stacktrace
 
      - name: Make Gradle executable
        run: chmod +x ./gradlew
